k8s-manifests/overlays/dev/superapp/client/orchestrator/patch/dev-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-orchestrator
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: client-orchestrator
        image: superapp-registry.cbe.com.et:5000/cbe-superapp/client-orchestrator-dev:latest
        imagePullPolicy: Always
